fixed datetime field

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div>
     <%= form.label :event_time, style: "display: block" %>
-    <%= form.text_field :event_time %>
+    <%= form.datetime_field :event_time %>
   </div>
 
   <div>
