--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,50 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @event %>
+<p>
+    <strong>Event Title:</strong>
+    <%= @event.title %>
+  </p>
+ <p>
+    <strong>Event Location:</strong>
+    <%= @event.location_description %>
+  </p>
+  <p>
+    <strong>Event Type:</strong>
+    <%= @event.event_type %>
+  </p>
 
+  <p>
+    <strong>Description:</strong>
+    <%= @event.description %>
+  </p>
+
+  <p>
+    <strong>Street:</strong>
+    <%= @event.street %>
+  </p>
+
+  <p>
+    <strong>City:</strong>
+    <%= @event.city %>
+  </p>
+
+  <p>
+    <strong>State:</strong>
+    <%= @event.state %>
+  </p>
+
+  <p>
+    <strong>Zip Code:</strong>
+    <%= @event.zip %>
+  </p>
+
+  <p>
+    <strong>Date and Time:</strong>
+    <%= @event.event_time %>
+  </p>
+
+
+    
 <div>
   <%= link_to "Edit this event", edit_event_path(@event) %> |
   <%= link_to "Back to events", events_path %>
