--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,45 +1,9 @@
-<div id="<%= dom_id event %>">
-  <p>
-    <strong>Event Title:</strong>
-    <%= event.title %>
-  </p>
- <p>
-    <strong>Event Location:</strong>
-    <%= event.location_description %>
-  </p>
-  <p>
-    <strong>Event Type:</strong>
-    <%= event.event_type %>
+<div id="<%= dom_id event %>" class="event-listing">
+  <h2><%= event.title %></h2>
+  <p><%= event.description %></p>
+    <p><b>Event Type: </b><%=event.event_type%>
   </p>
 
-  <p>
-    <strong>Description:</strong>
-    <%= event.description %>
-  </p>
-
-  <p>
-    <strong>Street:</strong>
-    <%= event.street %>
-  </p>
-
-  <p>
-    <strong>City:</strong>
-    <%= event.city %>
-  </p>
-
-  <p>
-    <strong>State:</strong>
-    <%= event.state %>
-  </p>
-
-  <p>
-    <strong>Zip Code:</strong>
-    <%= event.zip %>
-  </p>
-
-  <p>
-    <strong>Date and Time:</strong>
-    <%= event.event_time %>
-  </p>
-
+    <%= link_to "Show this event", event %>
+    
 </div>
