--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,14 +1,55 @@
 <p style="color: green"><%= notice %></p>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">gather</a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Campus Events<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Community Events</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn-primary type="submit">Sign Up</button>
+    </form>
+  </div>
+</nav>
+
 <h1>Events</h1>
 
 <div id="events">
+<div class="row">
   <% @events.each do |event| %>
-    <%= render event %>
-    <p>
-      <%= link_to "Show this event", event %>
-    </p>
-  <% end %>
+   <div class="col-md-3">
+      <div class="recipe-card mb-4">
+    	<div id="<%= dom_id event %>">
+  		<h2>
+    		<%= event.title %>
+  		</h2>
+ 		<p>
+   		<strong>Location:</strong>
+    		<%= event.location_description %>
+ 		</p>
+
+		 <p>
+		   <strong>Date and Time:</strong>
+		   <%= event.event_time %>
+		 </p>
+
+</div>
+    	<p>
+      		<%= link_to "Show this event", event %>
+    	</p>
+    </div>
+    </div>
+  	<% end %>
 </div>
 
 <%= link_to "New event", new_event_path %>
