--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,10 @@
 	background: #f5f5f5;
 	margin-bottom:2rem
 }
+
+img.event-show {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+    object-position: center center;
+}
