--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -41,8 +41,9 @@
   </div>
 
   <div>
+    
     <%= form.label :event_type, style: "display: block" %>
-    <%= form.text_field :event_type %>
+    <%= form.select :event_type, ['Community Events', 'Campus Events']%>
   </div>
 
   <div>
